[tool.poetry]
name = "steamids"
version = "0.1.0"
description = ""
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
steam = "^1.1.1"
bpython = "^0.20.1"
black = "^20.8b1"
flake8 = "^3.8.4"
pudb = "^2020.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
