[tool.poetry]
name = "steamids"
version = "0.1.0"
description = ""
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
steam = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target_version = ["py38"]
